fix: copy NonEmptyList's tail before null-checking its elements
The element null-check and the defensive copy were two separate reads of
the caller's list, so a caller mutating between them could slip a null
past the check. List.copyOf then threw its own message-less NPE, losing
"tail elements must not be null". Checking a copy the caller cannot
reach closes the window.

Also cheaper: List.copyOf on a mutable list is toArray plus a second
copy-and-check pass, where new ArrayList reuses the array outright. Three
element passes and two arrays become two and one. Benchmarked on
sequence over all-Invalid lists: neutral within noise at k<=10, 46%
faster at k=100, 62% at k=1000, with 20-24% less allocation.

All 183 tests pass unmodified, including the three PR 5 message tests.